feat: öldüm öldüm dirildim