@@ -1,18 +1,14 @@
 package gtu.cse.se.altefdirt.aymoose.account.internal.infra.adapter.jpa.repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.Optional;
 import org.springframework.stereotype.Component;
 
 import gtu.cse.se.altefdirt.aymoose.account.internal.domain.Account;
-import gtu.cse.se.altefdirt.aymoose.account.internal.domain.AccountFactory;
 import gtu.cse.se.altefdirt.aymoose.account.internal.domain.AccountRepository;
-import gtu.cse.se.altefdirt.aymoose.account.internal.infra.adapter.jpa.AccountEntity;
 import gtu.cse.se.altefdirt.aymoose.account.internal.infra.adapter.jpa.JpaAccountRepository;
+import gtu.cse.se.altefdirt.aymoose.account.internal.infra.mapper.AccountMapper;
 import gtu.cse.se.altefdirt.aymoose.shared.domain.AggregateId;
-import gtu.cse.se.altefdirt.aymoose.shared.domain.CreatedAt;
-import gtu.cse.se.altefdirt.aymoose.shared.domain.FullName;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
@@ -21,53 +17,42 @@ import lombok.RequiredArgsConstructor;
 @Transactional
 class AccountRepositryImpl implements AccountRepository {
 
-    private final JpaAccountRepository jpaAccountRepository;
-    private final AccountFactory accountFactory;
-
-    private Account build(AccountEntity accountEntity) {
-        return accountFactory.load(AggregateId.from(accountEntity.getId()), 
-                                    new FullName(accountEntity.getFirstName(), accountEntity.getLastName()),
-                                    new CreatedAt(accountEntity.getCreatedAt()),
-                                    accountEntity.isActive());
-    }
+    private final JpaAccountRepository accountRepository;
+    private final AccountMapper mapper;
 
     @Override
     public Account save(Account account) {
-        AccountEntity accountEntity = jpaAccountRepository.save(AccountEntity.fromDomain(account));
-        return build(accountEntity);
+        return mapper.toDomain(accountRepository.save(mapper.toEntity(account)));
     }
-
 
     @Override
     public Optional<Account> findById(AggregateId id) {
-        AccountEntity accountEntity = jpaAccountRepository.findById(id.value()).get();
-        return Optional.of(build(accountEntity));
+        return Optional.of(mapper.toDomain(accountRepository.findById(id.value()).get()));
     }
 
     @Override
     public List<Account> findAll() {
-        return jpaAccountRepository.findAll().stream().map(this::build).collect(Collectors.toList());
+        return accountRepository.findAll().stream().map(mapper::toDomain).toList();
     }
-
 
     @Override
     public int deleteById(AggregateId id) {
-        jpaAccountRepository.deleteById(id.value());
+        accountRepository.deleteById(id.value());
         return 1;
     }
 
     @Override
     public List<Account> findByIds(List<AggregateId> ids) {
-        return jpaAccountRepository.findAllById(ids.stream().map(AggregateId::value).collect(Collectors.toList())).stream().map(this::build).collect(Collectors.toList());
+        return accountRepository.findAllById(ids.stream().map(AggregateId::value).toList()).stream().map(mapper::toDomain).toList();
     }
 
     @Override
     public boolean existsById(AggregateId id) {
-        return jpaAccountRepository.existsById(id.value());
+        return accountRepository.existsById(id.value());
     }
 
     @Override
     public boolean existsByIds(List<AggregateId> ids) {
-        return jpaAccountRepository.existsByIds(ids.stream().map(AggregateId::value).collect(Collectors.toList()), ids.size());
+        return accountRepository.existsByIds(ids.stream().map(AggregateId::value).toList(), ids.size());
     }
 }
